[project]
name = "tron-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "psycopg2-binary",
    "pydantic-settings>=2.9.1",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "tronpy>=0.5.0",
    "uvicorn>=0.34.1",
]

[tool. black]
line-length = 88
target-version = ['py312']
skip-string-normalization = false
exclude = '''
/(
    \.git
    | \.venv
    | alembic
)/
'''
[tool. isort]
profile = "black"
line_length = 88
include_trailing_comma = true
multi_line_output = 3
skip_glob = ["*/alembic/*"]

